syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SomeCallMethod (SomeMethodReq) returns (SomeMethodResp);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message SomeMethodReq {
  string paramText = 1;
  double paramNumber = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message SomeMethodResp {
  string paramText = 1;
  double paramNumber = 2;
}